--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-react": "^3.34.0",
     "clsx": "^2.1.1",
     "next": "15.3.2",
     "react": "^19.0.0",
@@ -19,7 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.7",
-    "@types/node": "^20.17.47",
+    "@types/node": "^20.17.48",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
