--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@types/moment": "^2.13.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -20,7 +26,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.7",
-    "@types/node": "^20.17.47",
+    "@types/node": "^20.17.48",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
