--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
+    "@types/lodash": "^4.17.17",
     "@types/moment": "^2.13.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "next": "^15.3.2",
