--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@types/lodash": "^4.17.17",
     "@types/moment": "^2.13.0",
+    "@types/react-datepicker": "^6.2.0",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^3.3.0"
