--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/lodash": "^4.17.17",
     "@types/moment": "^2.13.0",
     "@types/react-datepicker": "^6.2.0",
