--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.5.4",
     "prettier": "^3.2.5",
+    "supabase": "^2.24.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   }
