--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-time-picker": "^7.0.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.2.19",
+    "@types/react-time-picker": "^6.0.0",
     "@types/react-tooltip": "^4.2.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
