--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -60,3 +60,27 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Run build
         run: npm run build
+
+  jest:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Cache jest
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules/.cache/jest
+          key: ${{ runner.os }}-jest-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Run jest
+        run: npm test
