removed duplicated package

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/list": "^6.1.18",
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -23,7 +24,6 @@
     "@types/react-datepicker": "^6.2.0",
     "clsx": "^2.1.1",
     "date-holidays": "^3.24.4",
-    "fullcalendar": "^6.1.18",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
