--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-datepicker": "^6.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "date-holidays": "^3.24.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
