--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/moment": "^2.13.0",
     "@types/react-datepicker": "^6.2.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "date-holidays": "^3.24.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
